Replace use of singleton