@@ -13,7 +13,7 @@ import static us.fatehi.utility.Utility.requireNotBlank;
 
 import java.io.Serial;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 import schemacrawler.schema.DatabaseObject;
 import schemacrawler.schema.Schema;
 import schemacrawler.schema.Synonym;
@@ -41,7 +41,7 @@ final class MutableSynonym extends AbstractDatabaseObject implements Synonym {
 
   @Override
   public Collection<? extends DatabaseObject> getReferencedObjects() {
-    return Collections.singletonList(referencedObject);
+    return List.of(referencedObject);
   }
 
   void setReferencedObject(final DatabaseObject referencedObject) {
